# barkibu_records_challenge

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  PRESENTATION.md  README.md  pyproject.toml  setup_and_run.sh
alembic/versions/: 86145da9400f_initial_migration.py
app/: main.py
app/adapters/ocr/: tesseract_ocr_adapter.py
app/adapters/postgres/: database.py  sql_repository.py
app/adapters/postgres/schema/: DocumentSchema.py
app/adapters/s3/: s3_adapter.py
app/api/: document_router.py
app/api/dtos/: document.py
app/core/: config.py  dependencies.py
app/domain/: document_repository.py  document_service.py  medical_record_extractor.py  ocr_service.py  text_extractor.py
app/domain/models/: document.py  medication.py  veterinary_info.py
app/domain/repositories/: file_repository.py
app/domain/services/: document_service.py
backend/: .env.example  README.md  testing_approach.md
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: document_router.py
backend/app/core/: dependencies.py
backend/app/domain/: document_repository.py  document_service.py
backend/app/domain/models/: visit.py  (+6 more)
backend/barkibu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_update_document.py  test_upload.py  test_upload_document.py
backend/tests/examples/: clinical_history_1.txt  corrupted.docx  medical_record.txt  medical_report.docx
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  testing_approach.md
frontend/src/: App.tsx  types.ts
frontend/src/components/: DocumentPreview.tsx  FileUpload.tsx  MedicalRecordEditor.tsx  SuccessModal.tsx
helm/barkibu/: Chart.yaml  values.yaml
helm/barkibu/templates/: backend-deployment.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  postgres-deployment.yaml  postgres-service.yaml  service.yaml
helm/barkibu/values/: dev.yaml
tests/: conftest.py  test_main.py  test_upload.py
(+13 files in other folders)
