[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barkibu"
version = "0.1.0"
description = "Intelligent medical records processing system for veterinary clinics"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "boto3",
    "python-multipart",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]