[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barkibu"
version = "0.1.0"
description = "Intelligent medical records processing system for veterinary clinics"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "pillow>=10.0.0",
    "python-docx>=0.8.11",
    "spacy>=3.7.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Integration tests requiring Docker",
    "slow: Slow tests taking >5 seconds"
]